# pacs

Exercises/99-gdbvalgrind/buggy/: integer-list.h
Exercises/99-makefile/preliminary_example/cmake/: CMakeLists.txt
Exercises/Challenges/Challenge3/FrancescoLohengrinRomeo/cmake/: CMakeLists.txt  README
Exercises/Challenges/Challenge3/FrancescoLohengrinRomeo/cmake/include/: integer-list.h  parse.h
Exercises/Challenges/Challenge3/FrancescoLohengrinRomeo/cmake/src/: integer-list.cpp
Extras/Students/: Students_2015.txt
